--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -64,18 +64,36 @@
                 app:layout_constraintTop_toBottomOf="@+id/name"
 
         />
+        <com.google.android.material.button.MaterialButton
+        style="?attr/materialButtonOutlinedStyle"
+            android:id="@+id/buttonmaterial"
+        app:strokeColor="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Login"
+            app:layout_constraintTop_toBottomOf="@id/profileImage"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:fontFamily="@font/whitneymedium"
+            android:textColor="@color/white"
+            android:layout_marginTop="10dp"
+            app:cornerRadius="5dp"
+            android:textSize="15sp"
+            app:strokeWidth="1dp" />
+
 
         <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/mobile"
-                android:layout_marginTop="@dimen/_20sdp"
+                app:layout_constraintTop_toBottomOf="@id/profileImage"
+
+                android:layout_marginTop="100dp"
                 android:paddingLeft="@dimen/_15sdp"
                 android:paddingRight="@dimen/_15sdp"
                 android:paddingTop="@dimen/_10sdp"
-                android:paddingBottom="@dimen/_110sdp"
+                android:paddingBottom="700dp"
                 android:background="@drawable/rounded_white_shape_radius_30"
                 app:layout_constraintBottom_toBottomOf="parent"
         >
