--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -10,10 +10,19 @@
             android:name="com.example.watchstoreapp.fragments.HomeFragment"
             android:label=""
             tools:layout="@layout/fragment_home">
-        <action android:id="@+id/action_home_to_detailsFragment" app:destination="@id/detailsFragment"/>
+        <action android:id="@+id/action_home_to_detailsFragment"
+            app:destination="@id/detailsFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_exit_anim"/>
         <action
             android:id="@+id/action_home_to_successFragment"
-            app:destination="@id/successFragment" />
+            app:destination="@id/successFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_exit_anim"/>
     </fragment>
 
     <fragment
@@ -33,7 +42,12 @@
     <fragment android:id="@+id/detailsFragment" android:name="com.example.watchstoreapp.fragments.DetailsFragment"
               android:label="" tools:layout="@layout/fragment_details">
         <argument android:name="productDetails" app:argType="com.example.watchstoreapp.model.ProductItem"/>
-        <action android:id="@+id/action_detailsFragment_to_home" app:destination="@id/home"/>
+        <action android:id="@+id/action_detailsFragment_to_home"
+            app:destination="@id/home"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_exit_anim"/>
     </fragment>
 <!--    <fragment android:id="@+id/successFragment" android:name="com.example.watchstoreapp.fragments.SuccessFragment"-->
 <!--              android:label="Payment Successful" tools:layout="@layout/fragment_success">-->
@@ -47,6 +61,10 @@
         android:label="" >
         <action
             android:id="@+id/action_successFragment_to_detailsFragment"
-            app:destination="@id/detailsFragment" />
+            app:destination="@id/detailsFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_exit_anim"/>
     </fragment>
 </navigation>
