--- a/app/src/main/res/layout/fragment_success.xml
+++ b/app/src/main/res/layout/fragment_success.xml
@@ -4,15 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools">
-<androidx.recyclerview.widget.RecyclerView
-    android:id="@+id/productList_rv1"
-    android:layout_width="match_parent"
+<androidx.compose.ui.platform.ComposeView
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    tools:listitem="@layout/product_item"
-    android:layout_marginTop="@dimen/_10sdp"
-    android:layout_marginHorizontal="5dp"
-    android:layout_marginBottom="70dp"
-    tools:itemCount="20"
+    android:id="@+id/cvpro">
 
-    />
+</androidx.compose.ui.platform.ComposeView>
 </LinearLayout>
