--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -72,17 +72,17 @@
                     android:layout_height="1dp"
                     android:background="#c0c0c0"
                     android:layout_centerInParent="true"/>
-            <TextView
+
+                <TextView
                     android:id="@+id/mrp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/_5sdp"
+                    android:fontFamily="@font/montserrat_medium"
                     android:text="$120"
                     android:textColor="@android:color/darker_gray"
                     android:textSize="@dimen/_16ssp"
-                    android:fontFamily="@font/montserrat_medium"
-                    android:textStyle="bold"
-                    android:layout_marginLeft="@dimen/_5sdp"
-            />
+                    android:textStyle="bold" />
             </RelativeLayout>
         </LinearLayout>
         <ImageView
